fixing overlapping h1

--- a/raippa/theme/raippa/css/screen.css
+++ b/raippa/theme/raippa/css/screen.css
@@ -541,4 +541,6 @@ table.navigation {
     margin: 2px;
 }
         
-
+h1 {
+	line-height: 1em;
+}
